--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="html" lang="ru">
+<html lang="ru">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -249,9 +249,9 @@
                             </ul>
                         </div>
 
-                        <h2 class="price__header">Адаптивная вёрстка под все устройства и&nbsp;браузеры от 1000 рублей всего за 4 часа.*</h2>
+                        <h2 class="price__header">Адаптивная вёрстка под все устройства&nbsp;и браузеры от&nbsp;1000&nbsp;рублей всего за&nbsp;4&nbsp;часа.*</h2>
 
-                        <p class="price__subtitle">* Срок и стоимость могут отличаться от&nbsp;заявленных и&nbsp;рассчитываются индивидуально, в&nbsp;зависимости от&nbsp;сложности задач.</p>
+                        <p class="price__subtitle">* Срок и стоимость могут отличаться от&nbsp;заявленных&nbsp;и рассчитываются индивидуально, в&nbsp;зависимости от&nbsp;сложности задач.</p>
                     </div>
                     
                 </section>
@@ -329,7 +329,7 @@
                             <label for="popup__input_tel_call" class="popup__header">Телефон</label><br>
                                 <input type="tel" required name="tel" class="popup__input tel-mask popup__input_tel" id="popup__input_tel_call" placeholder="Ваш телефон?" maxlength="10"><br>
 
-                            <input type="submit" value="Отправить" class="popup__input_send">
+                            <input type="submit" value="Отправить" class="popup__input_send popup__input_send_call">
                         </form>
                     </div>
                 </div>
@@ -357,11 +357,19 @@
                                 <input type="email" required name="email" class="popup__input" id="popup__input_email" placeholder="Ваш e-mail?"><br>
 
                             <label for="popup__input_textarea" class="popup__header">Комментарии</label><br>
-                                <textarea name="textarea" required id="popup__input_textarea" maxlength="500" placeholder="*(не более 500 символов)" rows="5"></textarea>
+                                <textarea name="textarea" id="popup__input_textarea" maxlength="500" placeholder="*(не более 500 символов)" rows="5"></textarea>
 
-                            <input type="submit" value="Отправить" class="popup__input_send">
+                            <input type="submit" value="Отправить" class="popup__input_send popup__input_send_order">
                         </form>
                     </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="popup-graditude">
+            <div class="popup-graditude__body block_flex">
+                <div class="popup-graditude__content block_flex">
+                    <span class="popup-graditude__text">Спасибо! Ваша заявка успешно принята.</span>
                 </div>
             </div>
         </div>
