--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <script src="js/swiper.min.js"></script>
         <script src="js/jquery.parallax.js"></script>
         <script src="js/script.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/jquery.maskedinput@1.4.1/src/jquery.maskedinput.min.js" type="text/javascript"></script>
     </head>
 
     <body>
@@ -324,10 +324,10 @@
                     <div class="popup__form">
                         <form action="#" method="POST" enctype="multipart/form-data">
                             <label for="popup__input_name_call" class="popup__header">Имя</label><br>
-                                <input type="text" required name="name" class="popup__input popup__input_name" id="popup__input_name_call" placeholder="Ваше имя?"><br>
+                                <input type="text" required name="name" class="popup__input popup__input_name" id="popup__input_name_call" placeholder="Ваше имя"><br>
 
                             <label for="popup__input_tel_call" class="popup__header">Телефон</label><br>
-                                <input type="tel" required name="tel" class="popup__input tel-mask popup__input_tel" id="popup__input_tel_call" placeholder="Ваш телефон?" maxlength="10"><br>
+                                <input type="tel" required name="tel" class="popup__input tel-mask popup__input_tel" id="popup__input_tel_call" placeholder="Ваш телефон" maxlength="10"><br>
 
                             <input type="submit" value="Отправить" class="popup__input_send popup__input_send_call">
                         </form>
@@ -348,13 +348,13 @@
                     <div class="popup__form">
                         <form action="#" method="POST" enctype="multipart/form-data">
                             <label for="popup__input_name_order" class="popup__header">Имя</label><br>
-                                <input type="text" required name="name" class="popup__input popup__input_name" id="popup__input_name_order" placeholder="Ваше имя?"><br>
+                                <input type="text" required name="name" class="popup__input popup__input_name" id="popup__input_name_order" placeholder="Ваше имя"><br>
 
                             <label for="popup__input_tel_order" class="popup__header">Телефон</label><br>
-                                <input type="tel" required name="tel" class="popup__input tel-mask popup__input_tel" id="popup__input_tel_order" placeholder="Ваш телефон?" maxlength="10"><br>
+                                <input type="tel" required name="tel" class="popup__input tel-mask popup__input_tel" id="popup__input_tel_order" placeholder="Ваш телефон" maxlength="10"><br>
 
                             <label for="popup__input_email" class="popup__header">E-mail</label><br>
-                                <input type="email" required name="email" class="popup__input" id="popup__input_email" placeholder="Ваш e-mail?"><br>
+                                <input type="email" required name="email" class="popup__input" id="popup__input_email" placeholder="Ваш e-mail"><br>
 
                             <label for="popup__input_textarea" class="popup__header">Комментарии</label><br>
                                 <textarea name="textarea" id="popup__input_textarea" maxlength="500" placeholder="*(не более 500 символов)" rows="5"></textarea>
